# UKBot

./: .description  .env.dist  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  MANIFEST.in  MIT-LICENSE.txt  Makefile  README.md  Sandkasse5.txt  docker-compose.yml  jobs.yaml  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-format-and-typing.yml  codeql-analysis.yml  deploy.yml  run-tests.yml
config/: config.ca-ref.yml  config.ca.yml  config.en.yml  config.es-estonia.yaml  config.es-estonia.yml  config.fi-100.yml  config.fi-ek.yml  config.fi-hl.yml  config.fi-pln.yml  config.fi-vk.yml  config.gl-estonia.yml  config.no-fd.yml  config.no-mk.yml  config.no-uk.yml  config.se.yml
config/sites/: cawiki.yml  default.yml  enwiki.yml  eswiki.yml  euwiki.yml  fiwiki.yml  glwiki.yml  nowiki.yml
docs/: Code_Contributions_Guidelines.md
jobs/: update-venv.sh  upload.sh
locale/: ca_ES.po  es_ES.po  eu_ES.po  fi_FI.po  gl_ES.po  messages.pot  nb_NO.po
test/: test_article.py  test_contributions.py  test_filters.py  test_more_filters.py  test_revision.py  test_rules.py  test_site.py
ukbot/: article.py  common.py  contest.py  contests.py  contributions.py  filters.py  revision.py  server.py  site.py  sites.py  ukbot.py  user.py  util.py
ukbot/rules/: __init__.py  byte.py  contrib.py  external_link.py  image.py  new.py  qualified.py  redirect.py  ref.py  regexp.py  (+4 more)
(+12 files in other folders)
